--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-echo VITE_API_URL=https://hansain121314-urbanshield-ai-api.hf.space > .env.production
+VITE_API_URL=https://hansain121314-urbanshield-ai-api.hf.space
